--- a/styles.css
+++ b/styles.css
@@ -15,88 +15,90 @@
 
 body {
   background-color: var(--color-primary-Cream);
-  height: 667px;
-  max-width: 375px;
+  max-width: 1440px;
 }
 
-* {
-  box-sizing: border-box;
-}
 /* ----------------------------- */
 
 /* -----------content----------- */
 
-.content {
-  width: 95%;
-  height: 90%;
-  background-color: var(--color--neutral-White);
+.main {
+  display: flex;
+  flex-direction: row;
+  width: 660px;
   margin: auto;
-  margin-top: 30px;
-  border-radius: 8px;
+  margin-top: 180px;
 }
 
-.content--mobile {
-  width: 100%;
+.image {
   border-radius: 8px 8px 0 0;
+}
+
+.image--mobile {
+  display: none;
+}
+
+.image--desktop {
+  width: 330px;
+  border-radius: 10px 0 0 10px;
+}
+
+.content {
+  background-color: var(--color--neutral-White);
+  border-radius: 0 10px 10px 0;
 }
 
 .content--perfume {
   font-family: var(--Font-Family-Montserrat);
   color: var(--color-neutral-DarkrayishBlue);
+  margin: 0;
+  padding: 35px 30px 20px 40px;
   font-size: 0.7rem;
   font-weight: 500;
   letter-spacing: 5px;
-  /* margin-left: 25px; */
   text-transform: uppercase;
-  margin: 0;
-  padding: 20px 25px 20px 25px;
 }
 
 .content--name {
   font-family: var(--Fonf-Family-Fraunces);
   color: var(--color-neutral-VeryDarkBlue);
   margin: 0;
-  padding: 0 0 0 25px;
-  font-size: 2rem;
+  padding: 0 30px 0 40px;
+  font-size: 2.4rem;
+  line-height: 2.3rem;
   font-weight: 700;
-  line-height: 1.9rem;
 }
 
 .content--description {
   font-family: var(--Font-Family-Montserrat);
   color: var(--color-neutral-DarkrayishBlue);
-  font-size: 0.9rem;
-  font-weight: 500;
   margin: 0;
-  padding: 20px 15px 10px 25px;
-  line-height: 1.4rem;
+  padding: 20px 30px 15px 40px;
+  font-size: 1rem;
+  font-weight: 500;
+  line-height: 1.7rem;
 }
 
 .content--price {
-  display: flex;
-  margin: 0px 0 0 25px;
-  height: 60px;
-}
-
-.content--discountPrice {
   display: inline-flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  margin: 0 0 20px 40px;
+  height: 60px;
+}
+
+.content--discountPrice {
   font-family: var(--Fonf-Family-Fraunces);
   color: var(--color-primary-DarkCyan);
   font-size: 2rem;
 }
 
 .content--originalPrice {
-  display: inline-flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
   font-family: var(--Font-Family-Montserrat);
   color: var(--color-neutral-DarkrayishBlue);
   font-size: 0.8rem;
-  padding: 15px;
+  padding-left: 20px;
   text-align: center;
   text-decoration: line-through;
 }
@@ -106,20 +108,21 @@ body {
   flex-direction: row;
   justify-content: center;
   gap: 10px;
-  margin-left: 6%;
-  padding: 14px 14px;
+  margin-left: 12%;
+  padding: 16px 14px;
   background-color: var(--color-primary-DarkCyan);
   font-family: var(--Font-Family-Montserrat);
   color: var(--color--neutral-White);
-  font-size: 0.8rem;
+  font-size: 1rem;
   font-weight: 500;
-  width: 88%;
+  width: 76%;
   border: none;
   border-radius: 8px;
 }
 
 .content--button:hover {
   background-color: #214232;
+  cursor: pointer;
 }
 
 /* ----------------------------- */
@@ -127,13 +130,75 @@ body {
 /*------------footer------------*/
 
 .attribution {
-  padding-top: 5px;
+  padding-top: 15px;
   font-size: 11px;
   text-align: center;
 }
+
 .attribution a {
   padding-top: 5px;
   color: hsl(228, 45%, 44%);
 }
 
 /* ----------------------------- */
+
+/*-------------media-------------*/
+
+@media screen and (max-width: 376px) {
+  body {
+    background-color: var(--color-primary-Cream);
+    max-width: 375px;
+  }
+
+  .main {
+    display: flex;
+    flex-direction: column;
+    width: 95%;
+    height: 600px;
+    margin: auto;
+    margin-top: 30px;
+  }
+
+  .image--mobile {
+    display: block;
+    width: 100%;
+    border-radius: 8px 8px 0 0;
+  }
+
+  .image--desktop {
+    display: none;
+  }
+
+  .content {
+    border-radius: 0 0 8px 8px;
+  }
+
+  .content--perfume {
+    padding: 20px 25px 20px 25px;
+  }
+
+  .content--name {
+    padding: 0 0 0 25px;
+    font-size: 2rem;
+    line-height: 1.9rem;
+  }
+
+  .content--description {
+    margin: 0;
+    padding: 20px 15px 10px 25px;
+    font-size: 0.9rem;
+    line-height: 1.4rem;
+  }
+
+  .content--price {
+    margin: 0 0 10px 25px;
+  }
+
+  .content--button {
+    margin-left: 6%;
+    margin-bottom: 25px;
+    padding: 14px 14px;
+    font-size: 0.8rem;
+    width: 88%;
+  }
+}
